# staticdi

./: .gitignore  CMakeLists.txt  README.md
example/src/: CMakeLists.txt  CheckResult.hxx  ConsoleUserInterface.cxx  ConsoleUserInterface.hxx  GuessTheNumber.cxx  GuessTheNumber.hxx  RandomNumberGenerator.hxx  StdRandomNumberGenerator.cxx  StdRandomNumberGenerator.hxx  UserInterface.hxx  main.cxx
example/test/: CMakeLists.txt  ConsoleUserInterfaceTest.cxx  GuessTheNumberTest.cxx  MockRandomNumberGenerator.hxx  MockUserInterface.hxx
include/: sdi.hxx
include/sdi/: component.hxx  container.hxx
include/sdi/tmp/: generic.hxx  type_list.hxx
test/: container.cxx
test/tmp/: generic.cxx  type_list.cxx
